5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1671_1103.log
== TEST (2019-04-24 14:51:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e", b)
	else:
		print(x "nao pertence ao intervalo", a "e", b)
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:51:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e", b)
else:
	print(x "nao pertence ao intervalo", a "e", b)
-- ERROR:
File "XXXX", line 13
    print(x "nao pertence ao intervalo", a "e", b)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:51:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e", b)
else:
print(x "nao pertence ao intervalo", a "e", b)
-- ERROR:
File "XXXX", line 13
    print(x "nao pertence ao intervalo", a "e", b)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e", b)
else:
	print(x, "nao pertence ao intervalo", a "e", b)
-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a "e", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e", b)
	else:
	print(x, "nao pertence ao intervalo", a "e", b)
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e", b)
	else:
		print(x, "nao pertence ao intervalo", a "e", b)
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, "e,", b)
else:
	print(x, "nao pertence ao intervalo", a "e,", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a "e,", b)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:55:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- EXECUTION TIME:
0.135962
-- ERROR:
  File "/home/codebench/codes/1671/1103/main.py", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) and (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) or (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:56:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) or (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- EXECUTION TIME:
0.152749
-- ERROR:
  File "/home/codebench/codes/1671/1103/main.py", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) or (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) or (a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) and(a <= x) and(x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:58:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, ",", b, "invalidas")
elif ((b > a) and(a <= x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and(a < x) and (x < b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and(a < x) and (x < b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:59:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and(a < x) and (x < b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- EXECUTION TIME:
0.293993
-- ERROR:
  File "/home/codebench/codes/1671/1103/main.py", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and(a < x) and (x < b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:59:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and(a < x) and (x < b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:00:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif ((b > a) and(a <= x) or (x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a ",", b)

-- ERROR:
File "XXXX", line 13
    print(x, "nao pertence ao intervalo", a ",", b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:04:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) and (x <= b):
	 print(x, "pertence ao intervalo", a ",", b)
elif ((a > x) and (x >b)):
	 print(x, "nao pertence ao intervalo", a "," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- ERROR:
File "XXXX", line 8
    if ((a <= x) and (x <= b):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) and (x <= b)):
	 print(x, "pertence ao intervalo", a ",", b)
elif ((a > x) and (x >b)):
	 print(x, "nao pertence ao intervalo", a "," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x, "pertence ao intervalo", a ",", b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:05:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ",", b)
elif ((a > x) and (x >b)):
	 print(x, "nao pertence ao intervalo", a "," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x, "pertence ao intervalo", a ",", b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:05:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a "," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x, "pertence ao intervalo", a ",", b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a "," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- ERROR:
File "XXXX", line 11
    print(x, "nao pertence ao intervalo", a "," , b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a "," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- ERROR:
File "XXXX", line 11
    print(x, "nao pertence ao intervalo", a "," , b)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:06:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- EXECUTION TIME:
0.160756
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:07:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:07:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- EXECUTION TIME:
0.18429
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:08:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x < a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:08:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x < a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- EXECUTION TIME:
0.136443
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:08:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x < a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- EXECUTION TIME:
0.137479
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:09:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x < a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:09:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a >= x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x < a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- EXECUTION TIME:
0.175992
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:10:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a < x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:10:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a < x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- EXECUTION TIME:
0.156147
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:10:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a < x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif ((x > a) and (x > b)):
	 print(x, "nao pertence ao intervalo", a ,"," , b)
else:
	 print("Entradas", a ,"e", b, "invalidas")
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a < x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:11:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a < x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- EXECUTION TIME:
0.147827
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a < x) or (x < b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <=x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <=x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- EXECUTION TIME:
0.171705
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <=x) or (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <=x) and (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:11:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x:"))  #dentro do intervalo a b
a = float(input("numero a:")) 
b = float(input("numero b:"))

if ((a <=x) and (x <= b)):
	 print(x, "pertence ao intervalo", a ,",", b)
elif (b<=a):
	print("Entradas", a ,"e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a ,"," , b)
	 
-- EXECUTION TIME:
0.184511
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
